# C-Pico_Non_Preemptive_Scheduler

./: CMakeLists.txt  README.md  build.sh
src/: main.c
src/include/scheduler/: scheduler.h
src/scheduler/: scheduler.c
