cmake_minimum_required(VERSION 3.12)
set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
set(PICO_SDK_INIT_CMAKE_FILE ${PICO_SDK_PATH}/pico_sdk_init.cmake)
include(${PICO_SDK_INIT_CMAKE_FILE})
project(scheduler)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_compile_options(-Wall -Wno-format -Werror -O3 -g0 -fdata-sections -ffunction-sections -Wl,--gc-sections)
aux_source_directory(src SOURCE_LIST)
aux_source_directory(src/scheduler SOURCE_LIST)
include_directories(src/include)
add_executable(scheduler ${SOURCE_LIST})
target_link_libraries(scheduler pico_stdlib)
pico_add_extra_outputs(scheduler)
